Remove sticky on top bar in settings fixing #235 to be readable at least

--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -15,10 +15,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: p2r(32 0);
-  position: sticky;
-  top: 0;
   background: var(--base-1);
-  z-index: 1000;
   border-bottom: 1px solid var(--base-4);
 
   .title {
